try to fix lag on ios

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -50,8 +50,22 @@ body, html {
   /* color: rgba(255, 255, 255, 0.25);
   text-align: center;
   margin: 0; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   height: 1200px;
+	/* width: 100vw; */
+	/* overscroll-behavior: none; */
+	/* overflow: hidden !important; */
+}
+
+/* https://greensock.com/docs/v3/HelperFunctions#scrollResize */
+#viewport {
+	/* position: fixed; */
+	overflow-x: hidden;
+	overflow-y: scroll;
+	height: 100%;
+	-webkit-overscroll-behavior: none;
+	overscroll-behavior: none;
+	-webkit-overflow-scrolling: touch;
 }
 
 .mainscroll{
